test/conformance/chainsaw/verify-images/clusterpolicy/standard/noconfigmap-diffimage-success/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-success
  namespace: mynamespace
spec:
  containers:
  - image: public.ecr.aws/docker/library/nginx:latest
    name: test-success
