test/conformance/chainsaw/verify-images/clusterpolicy/standard/noconfigmap-diffimage-success/pod-with-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: myconfigmap1
  namespace: mynamespace
data:
  configmapkey: |
    -----BEGIN PUBLIC KEY-----
    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
    -----END PUBLIC KEY-----
---
apiVersion: v1
kind: Pod
metadata:
  name: test-with-configmap
  namespace: mynamespace
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-with-configmap
