test/conformance/chainsaw/verify-images/clusterpolicy/standard/noconfigmap-diffimage-success/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: noconfigmap-diffimage-success
spec:
  concurrent: false
  timeouts:
    delete: 2m
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: image-verify-polset
  - name: step-02
    try:
    - apply:
        file: namespace.yaml
    - apply:
        file: good-pod.yaml
    - assert:
        file: good-pod.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: step-04
    try:
    - apply:
        file: update-policy.yaml
    - assert:
        file: update-policy.yaml
  - name: step-05
    try:
    - apply:
        file: pod-with-configmap.yaml
    - assert:
        file: pod-with-configmap-ready.yaml
